[package]
name = "alexjones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
serenity_utils = "0.7.0"
tokio = { version = "1.22.0", features = ["full"] }
dotenv = "0.15.0"
reqwest = "0.11.13"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.81"

